fix: wrong padding-css

--- a/containers/Skills/skills.module.scss
+++ b/containers/Skills/skills.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   height: calc(100vh - 60px);
   padding-right: 30px;
-  padding-top: 30px;
+  padding-left: 30px;
   .box {
     max-width: 800px;
     margin: 0 auto;
@@ -17,7 +17,7 @@
       &:not(:first-child) {
         margin-left: 30px;
       }
-      margin-bottom: 30px;
+      margin-top: 30px;
       svg {
         width: 100%;
         height: 100%;
